<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#9cf"
        android:stretchColumns="0,1,2"
        android:layout_alignParentTop="true">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#aaa"
                android:padding="5dp"
                android:id="@+id/card_0_0_background">

                <me.rydz.setgame.CardButton
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/card_0_0"
                    android:contentDescription="@string/card_0_0"
                    android:cropToPadding="false"
                    android:clickable="true"
                    android:background="@drawable/cblank" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#aaa"
                android:padding="5dp"
                android:id="@+id/card_0_1_background">

                <me.rydz.setgame.CardButton
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/card_0_1"
                    android:background="@drawable/cblank"
                    android:clickable="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#aaa"
                android:padding="5dp"
                android:id="@+id/card_0_2_background">

                <me.rydz.setgame.CardButton
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/card_0_2"
                    android:clickable="false"
                    android:background="@drawable/cblank" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#aaa"
                android:padding="5dp"
                android:id="@+id/card_1_0_background" >

                <me.rydz.setgame.CardButton
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/card_1_0"
                    android:cropToPadding="false"
                    android:clickable="true"
                    android:background="@drawable/cblank" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#aaa"
                android:padding="5dp"
                android:id="@+id/card_1_1_background"
                android:clickable="false">

                <me.rydz.setgame.CardButton
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/card_1_1"
                    android:background="@drawable/cblank"
                    android:clickable="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#aaa"
                android:padding="5dp"
                android:id="@+id/card_1_2_background" >

                <me.rydz.setgame.CardButton
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/card_1_2"
                    android:clickable="true"
                    android:background="@drawable/cblank" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#aaa"
                android:padding="5dp"
                android:id="@+id/card_2_0_background" >

                <me.rydz.setgame.CardButton
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/card_2_0"
                    android:cropToPadding="false"
                    android:clickable="true"
                    android:background="@drawable/cblank"
                    android:longClickable="false" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#aaa"
                android:padding="5dp"
                android:id="@+id/card_2_1_background" >

                <me.rydz.setgame.CardButton
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/card_2_1"
                    android:background="@drawable/cblank"
                    android:clickable="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#aaa"
                android:padding="5dp"
                android:id="@+id/card_2_2_background" >

                <me.rydz.setgame.CardButton
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/card_2_2"
                    android:clickable="true"
                    android:background="@drawable/cblank" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#aaa"
                android:padding="5dp"
                android:id="@+id/card_3_0_background" >

                <me.rydz.setgame.CardButton
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/card_3_0"
                    android:cropToPadding="false"
                    android:clickable="true"
                    android:background="@drawable/cblank" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#aaa"
                android:padding="5dp"
                android:id="@+id/card_3_1_background" >

                <me.rydz.setgame.CardButton
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/card_3_1"
                    android:background="@drawable/cblank"
                    android:clickable="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#aaa"
                android:padding="5dp"
                android:id="@+id/card_3_2_background" >

                <me.rydz.setgame.CardButton
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/card_3_2"
                    android:clickable="true"
                    android:background="@drawable/cblank" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentTop="false">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:measureWithLargestChild="false"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sets_found"
                android:id="@+id/sets_found_info"
                android:layout_marginRight="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_number_of_sets_found"
                android:id="@+id/sets_found_number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sets_identified_sets_possible_separator"
                android:id="@+id/sets_number_separator" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_number_of_possible_sets"
                android:id="@+id/sets_possible_number" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_button_text"
            android:id="@+id/hint_button"
            android:gravity="center_horizontal" />
    </LinearLayout>
</RelativeLayout>
